# Softshapeai

./: .env  .env.development  .env.example  .gitignore  AGENTS.md  CLAUDE.md  FAMILY & PICK UP MENU ONGOLE.xlsx  INVENTORY_QUICK_REFERENCE.md  INVENTORY_README.md  INVENTORY_TROUBLESHOOTING.md  INVENTORY_USER_GUIDE.md  INVENTORY_VISUAL_EXAMPLES.md  MOBILE_OPTIMIZATION_CHANGES.md  PHASE_4_ARCHITECTURE.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_4_QUICK_START.md  PHASE_4_TESTING_GUIDE.md  PRODUCTION_AUDIT_REPORT.md  README.md  UI_UX_IMPROVEMENTS.md  build_output.txt  capacitor.config.ts  captain-app-audit-report.md  captain.html  check-branches.cjs  eslint-errors.json  eslint-errors.txt  eslint.config.js  fix_encoding.cjs  git_push.bat  grep_results.txt  index.html  lint-results.json  lint_files.txt  lint_output.txt  lint_results.json  lint_results.txt  lint_summary.json  offline-first-master-plan.md  package-lock.json  (+12 more)
.github/workflows/: build-apps.yml  test.yml
apps/: README.md
apps/admin-android/: capacitor.config.ts  package.json
apps/admin-desktop/: package.json
apps/captain-android/: capacitor.config.ts  package.json  (+1 more)
apps/cashier-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/cashier-desktop/src-tauri/icons/: icon.icns
apps/cashier-desktop/src-tauri/src/: main.rs  windows_printing.rs
apps/cashier-desktop/src-tauri/windows/: hooks.nsh
backend/: package-lock.json
docs/: EDGE_INTEGRATION.md  PARITY_MAINTENANCE.md
public/: Special Veg Biryani.avif  manifest-admin.json  manifest-cashier.json  manifest.json  robots.txt  sitemap.xml  sw.js
src/: App.css  App.jsx  captain-entry.jsx  index.css  main.jsx  sw.js
(+269 files in other folders)
