[package]
name = "softshape-cashier-desktop"
version = "8.0.0"
description = "SoftShape Cashier Desktop App"
authors = ["SoftShape"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows printing (same as print-agent)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_IO",
] }
