[package]
name = "softshape-cashier-desktop"
version = "20.0.0"
description = "SoftShape Cashier Desktop App"
authors = ["SoftShape"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows printing (same as print-agent)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }
